--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
             <email>zhmacn@163.com</email>
             <name>zenghui.ma</name>
             <url>https://github.com/zhmacn/emock-core</url>
-            <id>pony1991</id>
+            <id>zhmacn</id>
         </developer>
     </developers>
     <issueManagement>
